Added reentrency test